--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
   <title>Velvety &mdash;</title>
-  <link href="https://fonts.cdnfonts.com/css/aileron" rel="stylesheet" />
-  <link rel="preload" href="/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript>
-    <link rel="stylesheet" href="/css/style.css">
-  </noscript>
-
+  <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" type="image/png" href="img/logo small.png" />
 </head>
 
@@ -202,7 +197,7 @@
       <div class="product-card-2">
         <div class="product-card__image">
           <a href="#">
-            <img src="img/Product Image 2.png" alt="Velvety Notorious" class="img-2" />
+            <img src="img/Product Image 2.png" alt="Velvety Notorious" class="img-2"/>
           </a>
         </div>
         <div class="product-card__desc">
