Fix Score PageSpeed

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 
         <div class="footer__bottom">
           <p class="footer__designed">
-            Designed by <a href="#">DhuhaCreative</a>. Powered by <a href="#">UI8</a>.
+            Designed by <a href="https://ui8.net/dhuhacreative/products">DhuhaCreative</a>. Powered by <a href="https://ui8.net/">UI8</a>.
           </p>
           <ul class="footer__links">
             <li><a href="#">Licenses</a></li>
