--- a/about.html
+++ b/about.html
@@ -638,7 +638,7 @@
                     <div class="team__container">
                         <div class="team__container-row">
                             <div class="team__card">
-                                <img src="img/about/Imagery-card.png" alt="team">
+                                <img src="img/about/Imagery-card.webp" alt="team">
 
                                 <div class="team__card-name">
                                     <h5 class="name">Elena Bennett</h5>
@@ -665,7 +665,7 @@
                                 <div class="sparation"></div>
                             </div>
                             <div class="team__card">
-                                <img src="img/about/Imagery-card row 1 - 2.png" alt="team">
+                                <img src="img/about/Imagery-card row 1 - 2.webp" alt="team">
 
                                 <div class="team__card-name">
                                     <h5 class="name">Isabella Rodriguez</h5>
@@ -693,7 +693,7 @@
                             </div>
 
                             <div class="team__card">
-                                <img src="img/about/Imagery-card row 1 - 3.png" alt="team">
+                                <img src="img/about/Imagery-card row 1 - 3.webp" alt="team">
 
                                 <div class="team__card-name">
                                     <h5 class="name">Lucas Turner</h5>
@@ -723,7 +723,7 @@
 
                         <div class="team__container-row">
                             <div class="team__card">
-                                <img src="img/about/Imagery-card row 2.png" alt="team">
+                                <img src="img/about/Imagery-card row 2.webp" alt="team">
 
                                 <div class="team__card-name">
                                     <h5 class="name">Sophia Langley</h5>
@@ -750,7 +750,7 @@
                                 <div class="sparation"></div>
                             </div>
                             <div class="team__card">
-                                <img src="img/about/Imagery-card row 2 - 2.png" alt="team">
+                                <img src="img/about/Imagery-card row 2 - 2.webp" alt="team">
 
                                 <div class="team__card-name">
                                     <h5 class="name">Liam Morgan</h5>
@@ -777,7 +777,7 @@
                             </div>
 
                             <div class="team__card">
-                                <img src="img/about/Imagery-card row 2 - 3.png" alt="team">
+                                <img src="img/about/Imagery-card row 2 - 3.webp" alt="team">
 
                                 <div class="team__card-name">
                                     <h5 class="name">Ava Foster</h5>
@@ -858,7 +858,7 @@
                             </div>
 
                             <div class="team__card">
-                                <img src="img/about/Imagery-card row 3 - 3.png" alt="team">
+                                <img src="img/about/Imagery-card row 3 - 3.webp" alt="team">
 
                                 <div class="team__card-name">
                                     <h5 class="name">Ella Clarke</h5>
